--- a/Apps/OfConvenio/templates/Proyeccion/ListaProyecto.html
+++ b/Apps/OfConvenio/templates/Proyeccion/ListaProyecto.html
@@ -6,20 +6,22 @@ Proyecto {{ object.nombreProyecto }} | Proyeccion Social
 {% block Css %}
 <link rel="stylesheet" href="{% static 'Css/Proyeccion/listaProyectos.css' %}">
 <style>
-  .titulo{
+  .titulo {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  h1{
+
+  h1 {
     text-align: left;
     font-weight: 800;
     margin-top: 10px;
     font-size: 50px;
-}
-.card-text{
-  font-size: 24px
-}
+  }
+
+  .card-text {
+    font-size: 24px
+  }
 </style>
 
 {% endblock Css %}
@@ -27,37 +29,51 @@ Proyecto {{ object.nombreProyecto }} | Proyeccion Social
 
 <div class="titulo">
   <a href="{%  url  'inicioProyeccion' %}">
-    <img class="wave"  style="width: 50px;" src="{% static 'Image/gif/flecha-izquierda.gif' %}" alt="">
+    <img class="wave" style="width: 50px;" src="{% static 'Image/gif/flecha-izquierda.gif' %}" alt="">
   </a>
   <h1> Proyecto: {{object.nombreProyecto}}</h1>
 </div>
-<div class="row" style="margin-top: 50px;" >
+<div class="row" style="margin-top: 50px;">
   <div class="card" style="width: 17rem;  margin-top:100px; margin-left: 50px; height:550px;border-radius: 20px; ">
-    <img src="{% static 'Image/imagenes/agregar-usuario.png' %}" style="margin-top: 20px;" class="card-img-top" alt="...">
+    <img src="{% static 'Image/imagenes/agregar-usuario.png' %}" style="margin-top: 20px;" class="card-img-top"
+      alt="...">
     <div class="card-body">
       <h2 class="card-title">Agregar Informacion</h2>
-      <a href="{% url 'agregarDocente' %}" class="btn btn-dark" style="margin-bottom:10px; display:flex;justify-content:center" >Agregar Docente</a>
-      <a href="#"  class="btn btn-primary" style="margin-bottom: 10px;display:flex;justify-content:center" >Agregar Estudiante</a>
-      <a href="#" style="display:flex;justify-content:center" class="btn btn-success">Editar</a>
+      <a href="{% url 'agregarDocente' %}" class="btn btn-dark"
+        style="margin-bottom:10px; display:flex;justify-content:center">Agregar Docente</a>
+      <a href="#" class="btn btn-primary" style="margin-bottom: 10px;display:flex;justify-content:center">Agregar
+        Estudiante</a>
+      <a href="{% url 'editarProyecto'  object.codigo %}" style="display:flex;justify-content:center"
+        class="btn btn-success">Editar</a>
     </div>
   </div>
   <div class="col-sm-8">
-    <div class="card" style="border-radius: 20px;">
-      <div class="card-body"  >
-        <h1 class="card-title" style="font-size:60px;display: flex; align-items:center; justify-content:center; margin-bottom:40px; "  >Informacion del Proyecto</h1>
-        <p class="card-text"> <strong> Nombre del programa:  </strong>  {{object.programa}} </p>
-        <p class="card-text"> <strong> Ciudad: </strong>{{object.ciudad}} </p>
-        <p class="card-text"> <strong> Institucion: </strong>{{object.institucion }} </p>
-        <p class="card-text"> <strong> Numero de Estudiantes: </strong>{{object.numeroEstudiantes}} </p>
-        <p class="card-text"> <strong> Tipo de Comunidad: </strong>{{object.tipoComunidad}} </p>
-        <p class="card-text"> <strong> Organizacion: </strong>{{object.organizacion}} </p>
-        <p class="card-text"> <strong> Facultad: </strong> {{object.facultad}}</p>
-        <p class="card-text"> <strong> Nombre del Proyecto: </strong>{{object.nombreProyecto}} </p>
-        <p class="card-text"> <strong> Codigo Bput: </strong> {{object.codigoBput}}</p>
-        <p class="card-text"> <strong> Descripcion:</strong>{{object.descripcion}} </p>
-        <p class="card-text"> <strong> Evidencia:</strong> </p>
-        <img class="evidencia" src="{{ object.evidencia.url }}" alt="" width="250"  height="250">
+    <div class="card" style="border-radius: 20px; margin-left:40px;">
+      <div class="card-body">
+        <h1 class="card-title"
+          style="font-size:60px;display: flex; align-items:center; justify-content:center; margin-bottom:40px; ">
+          Informacion del Proyecto</h1>
+        <div class="grid">
 
+          <div class="left">
+            <p class="card-text"> <strong> Nombre del programa: </strong> {{object.programa}} </p>
+            <p class="card-text"> <strong> Ciudad: </strong>{{object.ciudad}} </p>
+            <p class="card-text"> <strong> Institucion: </strong>{{object.institucion }} </p>
+            <p class="card-text"> <strong> Numero de Estudiantes: </strong>{{object.numeroEstudiantes}} </p>
+            <p class="card-text"> <strong> Tipo de Comunidad: </strong>{{object.tipoComunidad}} </p>
+          </div>
+          <div class="right">
+            <p class="card-text"> <strong> Organizacion: </strong>{{object.organizacion}} </p>
+            <p class="card-text"> <strong> Facultad: </strong> {{object.facultad}}</p>
+            <p class="card-text"> <strong> Nombre del Proyecto: </strong>{{object.nombreProyecto}} </p>
+            <p class="card-text"> <strong> Codigo Bput: </strong> {{object.codigoBput}}</p>
+            <p class="card-text"> <strong> Descripcion:</strong>{{object.descripcion}} </p>
+          </div>
+          <div class="centro">
+            <p class="card-text"> <strong> Evidencia:</strong> </p>
+            <img class="evidencia" src="{{ object.evidencia.url }}" alt="" width="250" height="250"  style="display: flex;justify-content:center; align-items:center;" >
+          </div>
+        </div>
       </div>
     </div>
   </div>
