--- a/Apps/OfConvenio/templates/Base.html
+++ b/Apps/OfConvenio/templates/Base.html
@@ -30,7 +30,7 @@
         /* ===== Colors ===== */
         --body-color: white;
         --sidebar-color:  #201E1E;
-        --primary-color:  rgb(237, 50, 50);
+        --primary-color: #D5D8DC;
         --primary-color-light: #F6F5FF;
         --toggle-color: #DDD;
         --text-color: white;
@@ -321,6 +321,19 @@
       body.dark .home .text{
         color: var(--text-color);
       }
+
+      footer {
+        background-color: black;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 40px;
+        color: white;
+      }
+html {
+  min-height: 100%;
+  position: relative;
+}
 </style>
 {% block Css %}
 
@@ -385,6 +398,15 @@
 
 
         {% endblock %}
+        <br>
+        <footer class="bg-light text-center text-lg-start">
+          <!-- Copyright -->
+          <div class="text-center text-white p-2" style="background-color: #201E1E;">
+            © 2022   Copyright:
+            <a class="text-white" href="https://www.ut.edu.co/" target="_blank" >Universidad del Tolima</a>
+          </div>
+          <!-- Copyright -->
+        </footer>
     </section>
    
   
