--- a/ProyeccionSocial/static/Css/Proyeccion/listaProyectos.css
+++ b/ProyeccionSocial/static/Css/Proyeccion/listaProyectos.css
@@ -14,5 +14,16 @@
 #image{
     width: 100px;
 }
-
-    
+.grid{
+    display: grid;
+    grid-template-rows: 300px 300px;
+    grid-template-columns: 550px 400px;
+    grid-column-gap: 50px;
+    grid-row-gap: 20px;
+}
+.left{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start:1 ;
+    grid-row-end: 2 ;
+}
