--- a/ProyeccionSocial/static/Css/Proyeccion/listaProyectos.css
+++ b/ProyeccionSocial/static/Css/Proyeccion/listaProyectos.css
@@ -2,17 +2,17 @@
 .body{
    font-family:'Hind', sans-serif;
 }
-.titulo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 .wave{
     width: 50px;
     float: left;
 }
 #image{
     width: 100px;
+}
+.card{
+    margin-left: 30px;
+    margin-top: 80px;
+    border-radius: 40px;
 }
 .grid{
     display: grid;
