--- a/Apps/OfConvenio/templates/Base.html
+++ b/Apps/OfConvenio/templates/Base.html
@@ -29,7 +29,7 @@
       :root{
         /* ===== Colors ===== */
         --body-color: white;
-        --sidebar-color:  #201E1E;
+        --sidebar-color:  black;
         --primary-color: #D5D8DC;
         --primary-color-light: #F6F5FF;
         --toggle-color: #DDD;
