--- a/Apps/OfConvenio/templates/index.html
+++ b/Apps/OfConvenio/templates/index.html
@@ -50,5 +50,7 @@
 <div class="opciones">
     <a class="btn btn-dark" href="{% url 'inicioProyeccion' %}" role="button">Inicio Proyeccion</a></li>
     <a class="btn btn-dark" href="{% url 'inicioConvenio' %}" role="button">Inicio Convenios</a>
+    <a href="{% url 'agregarDocente'  Persona.pers_id %}" class="btn btn-dark"
+    style="margin-bottom:10px; display:flex;justify-content:center">Agregar Docente</a>
 </div>
 {% endblock %}   
