--- a/Apps/OfConvenio/templates/Base.html
+++ b/Apps/OfConvenio/templates/Base.html
@@ -14,331 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link  href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css" rel="stylesheet">
-        <link rel="shortcut icon" href="{% static 'image/Inicio/Icono.PNG' %}">
+    <link rel="shortcut icon" href="{% static 'image/Inicio/Icono.PNG' %}">
+    <link rel="stylesheet" href="{% static 'Css/base/base.css' %}">
 </head>
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      i.bx.bx-log-out.icon {
-        margin-left: 1%;
-    }
-      
-      :root{
-        /* ===== Colors ===== */
-        --body-color: white;
-        --sidebar-color:  black;
-        --primary-color: #D5D8DC;
-        --primary-color-light: #F6F5FF;
-        --toggle-color: #DDD;
-        --text-color: white;
-      
-        /* ====== Transition ====== */
-        --tran-03: all 0.2s ease;
-        --tran-03: all 0.3s ease;
-        --tran-04: all 0.3s ease;
-        --tran-05: all 0.3s ease;
-      }
-      
-      body{
-        min-height: 100vh;
-        background-color: var(--body-color);
-        transition: var(--tran-05);
-      }
-      
-      ::selection{
-        background-color: var(--primary-color);
-        color: #fff;
-      }
-           
-      /* ===== Sidebar ===== */
-      .sidebar{
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 250px;
-        padding: 10px 14px;
-        background: var(--sidebar-color);
-        transition: var(--tran-05);
-        z-index: 100;  
-      }
-      .sidebar.close{
-        width: 88px;
-      }
-      
-      /* ===== Reusable code - Here ===== */
-      .sidebar li{
-        height: 50px;
-        list-style: none;
-        display: flex;
-        align-items: center;
-        margin-top: 10px;
-      }
-      
-      .sidebar header .image,
-      .sidebar .icon{
-        min-width: 60px;
-        border-radius: 6px;
-      }
-      
-      .sidebar .icon{
-        min-width: 60px;
-        border-radius: 6px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-      }
-      
-      .sidebar .text,
-      .sidebar .icon{
-        color: var(--text-color);
-        transition: var(--tran-03);
-      }
-      
-      .sidebar .text{
-        font-size: 17px;
-        font-weight: 500;
-        white-space: nowrap;
-        opacity: 1;
-      }
-      .sidebar.close .text{
-        opacity: 0;
-      }
-
-      i {
-        margin-left: -15px;
-    }
-      /* =========================== */
-      
-      .sidebar header{
-        position: relative;
-      }
-      
-      .sidebar header .image-text{
-        display: flex;
-        align-items: center;
-      }
-      .sidebar header .logo-text{
-        display: flex;
-        flex-direction: column;
-      }
-      header .image-text .name {
-        margin-top: 2px;
-        font-size: 18px;
-        font-weight: 600;
-      }
-      
-      header .image-text .profession{
-        font-size: 16px;
-        margin-top: -2px;
-        display: block;
-      }
-      
-      .sidebar header .image{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      
-      .sidebar header .image img{
-        width: 40px;
-        border-radius: 6px;
-      }
-      
-      .sidebar header .toggle{
-        position: absolute;
-        top: 50%;
-        right: -25px;
-        transform: translateY(-50%) rotate(180deg);
-        height: 25px;
-        width: 25px;
-        background-color: var(--primary-color);
-        color: var(--sidebar-color);
-        border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 22px;
-        cursor: pointer;
-        transition: var(--tran-05);
-      }
-      
-      body.dark .sidebar header .toggle{
-        color: var(--text-color);
-      }
-      
-      .sidebar.close .toggle{
-        transform: translateY(-50%) rotate(0deg);
-      }
-      
-      .sidebar .menu{
-        margin-top: 40px;
-      }
-      
-      .sidebar li.search-box{
-        border-radius: 6px;
-        background-color: var(--primary-color-light);
-        cursor: pointer;
-        transition: var(--tran-05);
-      }
-      
-      .sidebar li.search-box input{
-        height: 100%;
-        width: 100%;
-        outline: none;
-        border: none;
-        background-color: var(--primary-color-light);
-        color: var(--text-color);
-        border-radius: 6px;
-        font-size: 17px;
-        font-weight: 500;
-        transition: var(--tran-05);
-      }
-      .sidebar li a{
-        list-style: none;
-        height: 100%;
-        background-color: transparent;
-        display: flex;
-        align-items: center;
-        height: 100%;
-        width: 100%;
-        border-radius: 6px;
-        text-decoration: none;
-        transition: var(--tran-03);
-      }
-      
-      .sidebar li a:hover{
-        background-color: var(--primary-color);
-      }
-      .sidebar li a:hover .icon,
-      .sidebar li a:hover .text{
-        color: var(--sidebar-color);
-      }
-      body.dark .sidebar li a:hover .icon,
-      body.dark .sidebar li a:hover .text{
-        color: var(--text-color);
-      }
-      
-      .sidebar .menu-bar{
-        height: calc(100% - 55px);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        overflow-y: scroll;
-      }
-      .menu-bar::-webkit-scrollbar{
-        display: none;
-      }
-      .sidebar .menu-bar .mode{
-        border-radius: 6px;
-        background-color: var(--primary-color-light);
-        position: relative;
-        transition: var(--tran-05);
-      }
-      
-      .menu-bar .mode .sun-moon{
-        height: 50px;
-        width: 60px;
-      }
-      
-      .mode .sun-moon i{
-        position: absolute;
-      }
-      .mode .sun-moon i.sun{
-        opacity: 0;
-      }
-      body.dark .mode .sun-moon i.sun{
-        opacity: 1;
-      }
-      body.dark .mode .sun-moon i.moon{
-        opacity: 0;
-      }
-      
-      .menu-bar .bottom-content .toggle-switch{
-        position: absolute;
-        right: 0;
-        height: 100%;
-        min-width: 60px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 6px;
-        cursor: pointer;
-      }
-      .toggle-switch .switch{
-        position: relative;
-        height: 22px;
-        width: 40px;
-        border-radius: 25px;
-        background-color: var(--toggle-color);
-        transition: var(--tran-05);
-      }
-      
-      .switch::before{
-        content: '';
-        position: absolute;
-        height: 15px;
-        width: 15px;
-        border-radius: 50%;
-        top: 50%;
-        left: 5px;
-        transform: translateY(-50%);
-        background-color: var(--sidebar-color);
-        transition: var(--tran-04);
-      }
-      
-      body.dark .switch::before{
-        left: 20px;
-      }
-      
-      .home{
-        position: absolute;
-        top: 0;
-        top: 0;
-        left: 250px;
-        height: 100vh;
-        width: calc(100% - 250px);
-        background-color: var(--body-color);
-        transition: var(--tran-05);
-      }
-      .home .text{
-        font-size: 30px;
-        font-weight: 500;
-        color: var(--text-color);
-        padding: 12px 60px;
-      }
-      
-      .sidebar.close ~ .home{
-        left: 78px;
-        height: 100vh;
-        width: calc(100% - 78px);
-      }
-      body.dark .home .text{
-        color: var(--text-color);
-      }
-
-      footer {
-        background-color: black;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 40px;
-        color: white;
-      }
-html {
-  min-height: 100%;
-  position: relative;
-}
-</style>
 {% block Css %}
 
 {% endblock%}
-<link rel="stylesheet" href="{% static 'base/base.css' %}">
 <body>
     <nav class="sidebar close">
         <header>
@@ -366,7 +47,7 @@ html {
                     </li>
                     <li class="nav-link">
                         <a href="{% url 'inicioProyeccion' %}">
-                            <i class='bx bx-bar-chart-alt-2 icon'  ></i>
+                            <i class='bx bx-bar-chart-alt-2 icon'></i>
                             <span class="text nav-text">Proyectos</span>
                         </a>
                     </li>    
@@ -392,7 +73,7 @@ html {
     </nav>
     
     <section class="home">
-        <div class="text"> {{page_title}} </div>
+        <div class="text" style="color: white;" > {{page_title}} </div>
         {% block body%}
 
 
@@ -403,7 +84,7 @@ html {
           <!-- Copyright -->
           <div class="text-center text-white p-2" style="background-color: #201E1E;">
             © 2022   Copyright:
-            <a class="text-white" href="https://www.ut.edu.co/" target="_blank" >Universidad del Tolima</a>
+            <a class="text-white" href="https://www.ut.edu.co/" style="text-decoration: none;" target="_blank" >Universidad del Tolima</a>
           </div>
           <!-- Copyright -->
         </footer>
@@ -434,17 +115,6 @@ toggle.addEventListener("click" , () =>{
 searchBtn.addEventListener("click" , () =>{
     sidebar.classList.remove("close");
 })
-
-modeSwitch.addEventListener("click" , () =>{
-    body.classList.toggle("dark");
-    
-    if(body.classList.contains("dark")){
-        modeText.innerText = "Light mode";
-    }else{
-        modeText.innerText = "Dark mode";
-        
-    }
-});
 </script>
 
 {% block Scripts %}
