--- a/Apps/OfConvenio/templates/Convenio/InicioConvenio.html
+++ b/Apps/OfConvenio/templates/Convenio/InicioConvenio.html
@@ -4,7 +4,7 @@
     Inicio Convenios | Proyeccion Social
 {% endblock title %}
 {% block Css %}
-    <link rel="stylesheet" href="{% static 'Css/Convenio/inicioConvenio.css' %}">
+<link rel="stylesheet" href="{% static 'Css/Convenio/inicioConvenio.css' %}">
 {% endblock Css %}
 {% block body %}
     <div class="titulo" style="margin-left: 30px;">
@@ -13,7 +13,7 @@
     </div>
 
     <div class="reporte">
-    <a role="button" href="{% url 'Reporte' %}">
+    <a role="button"  style="text-decoration: none;" href="{% url 'Reporte' %}">
         <img class="img" src="{% static 'image/Proyeccion/Reporte.png' %}"> Generar Reporte
     </a>
     </div>
@@ -66,7 +66,7 @@
                   {% endif %}
                 </tbody>
           </table>
- <ul>
+ <ul class="page" >
      <li class="li">
          {% if page_obj.has_previous %}
              <a href="?page={{ page_obj.previous_page_number }}" class="btn btn-secondary" role="button">Anterior</a>
