--- a/ProyeccionSocial/static/Css/Proyeccion/inicioProyeccion.css
+++ b/ProyeccionSocial/static/Css/Proyeccion/inicioProyeccion.css
@@ -53,7 +53,9 @@ h1{
     margin-top: 20px;
     border: none;
 }
-
+a{
+    text-decoration: none;
+}
 .li{
     float: right;
     margin-right: 80px;
