--- a/Apps/OfConvenio/templates/Proyeccion/añadirDocente.html
+++ b/Apps/OfConvenio/templates/Proyeccion/añadirDocente.html
@@ -20,9 +20,9 @@
                 </tr>
             </thead>
             <tbody>
-                {% for  TipoDocumento in object_list  %}
+                {% for  Tipodocumento in object_list  %}
                 <tr>
-                    <td>{{ TipoDocumento.tdoc_id }}</td>
+                    <td>{{ Tipodocumento.tdoc_id }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
