--- a/Apps/OfConvenio/templates/Convenio/convenio.html
+++ b/Apps/OfConvenio/templates/Convenio/convenio.html
@@ -49,9 +49,9 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a href="{% url 'inicioConvenio' %}" class="btn btn-danger" role="button"
+                <a href="{% url 'inicioConvenio' %}" class="btn btn-outline-danger" role="button"
                     data-dismiss="modal">Cancelar</a>
-                <button class="btn btn-primary" type="submit">Guardar</button>
+                <button class="btn btn-outline-success" type="submit">Guardar</button>
             </div>
         </form>
     </div>
