--- a/Apps/OfConvenio/templates/Proyeccion/ListaProyecto.html
+++ b/Apps/OfConvenio/templates/Proyeccion/ListaProyecto.html
@@ -21,12 +21,26 @@ Proyecto {{ object.nombreProyecto }} | Proyeccion Social
       <img id="image" src="{% static 'Image/imagenes/agregar-usuario.png' %}" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Agregar Informacion</h2>
-        <a href="#" class="btn btn-primary" style="margin-bottom: 10px;display:flex;justify-content:center">Agregar
-          Estudiante</a>
-        <a href="{% url 'editarProyecto'  object.codigo %}" style="display:flex;justify-content:center"
-          class="btn btn-success">Editar</a>
-          <a href="{% url 'agregarDocente'%}" class="btn btn-dark"
-    style="margin-top:10px; display:flex;justify-content:center">Agregar Docente</a>
+       <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle"  style="margin-bottom: 10px" data-bs-toggle="dropdown" aria-expanded="false">
+              Agregar Estudiante
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <li><a class="dropdown-item" href="{% url 'agregarDocente'%}">Estudiante UT</a></li>
+              <li><a class="dropdown-item" href="{% url 'crearEstudiante' %}">Estudiante Externo</a></li>
+            </ul>
+          </div>
+          <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-outline-secondary dropdown-toggle" style="margin-bottom: 10px" data-bs-toggle="dropdown" aria-expanded="false">
+              Agregar Docente
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <li><a class="dropdown-item" href="{% url 'agregarDocente'%}">Docente UT</a></li>
+              <li><a class="dropdown-item" href="#">Docente Externo</a></li>
+            </ul>
+          </div>
+          <a href="{% url 'editarProyecto'  object.codigo %}" style="display:flex;justify-content:center"
+          class="btn btn-outline-info">Editar</a>
       </div>
     </div>
   </div>
@@ -60,7 +74,9 @@ Proyecto {{ object.nombreProyecto }} | Proyeccion Social
 
           </div>
         </div>
+
       </div>
+        <p class="card-text"> <strong> Nombre estudiante:</strong>{{ object.estudianteE.pri_nombre }} </p>
     </div>
   </div>
 </div>
