--- a/Apps/OfConvenio/templates/Proyeccion/crearProyecto.html
+++ b/Apps/OfConvenio/templates/Proyeccion/crearProyecto.html
@@ -26,6 +26,11 @@
                 {{ form.programa }}
             </div>
             <div class="grupo">
+                {{ form.sub_proyecto.label }}
+                {{ form.sub_proyecto }}
+            </div>
+
+            <div class="grupo">
                 {{ form.ciudad.label }}
                 {{ form.ciudad}}
             </div>
