--- a/ProyeccionSocial/static/Css/Proyeccion/añadirDocente.css
+++ b/ProyeccionSocial/static/Css/Proyeccion/añadirDocente.css
@@ -3,60 +3,29 @@ card{
     margin-top: 80px;
     margin-left: 130px;
    }
+
 h1{
     text-align: left;
     font-weight: 800;
     margin-top: 10px;
     font-size: 50px;
+    margin-left: 30px;
+    margin-bottom: 40px;
+
 }
 .gif{
     width: 50px;
     float: left;
+    margin-left: -100px;
 }
 .img{
     width: 30px;
 }
-.crear{
-    color: black;
-    font-size: 20px;
-}
 .card-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    width: 90%;
+    margin-left: 100px;
 }
-.gif1{
-    width: 50px;
-    float: left;
-    margin-top: -80px;
-}
-.listado{
-    text-align: left;
-    font-weight: 800;
-    margin-top: -80px;
-    font-size: 40px;
-}
-.reporte{
-    float: right;
-    margin-right: 80px;
-}
-.conteiner{
-    margin: 20px;
-}
-.descripcion{
-    max-width: 250px;
-}
-
-.crear{
-    float: right;
-    margin-right: 40px;
-    margin-top: 20px;
-    border: none;
-}
-a{
-    text-decoration: none;
-}
-.li{
+button{
     float: right;
     margin-right: 80px;
 }
