--- a/ProyeccionSocial/static/Css/base/base.css
+++ b/ProyeccionSocial/static/Css/base/base.css
@@ -307,16 +307,7 @@
         background-color: var(--body-color);
         transition: var(--tran-05);
       }
-      footer {
-        background-color: black;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 40px;
-        color: white;
-      }
-
-html {
-  min-height: 100%;
-  position: relative;
-}
+  .contenido{
+    margin-left: 50px;
+    margin-right: 20px;
+  }
